[gd_scene load_steps=5 format=3 uid="uid://cwcyo0gadbpnu"]

[ext_resource type="Texture2D" uid="uid://bu2tydgc13cjj" path="res://orc.png" id="1_5owds"]
[ext_resource type="Script" path="res://orc.gd" id="1_pilh6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kq3g1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lnrr4"]

[node name="orc" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_pilh6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5owds")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
scale = Vector2(0.635959, 1.42703)
shape = SubResource("RectangleShape2D_kq3g1")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 2)
scale = Vector2(0.835177, 1)
shape = SubResource("CapsuleShape2D_lnrr4")

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
